package com.example.myarena.persistance.dao;

public interface ReservationDAO {
}
