package com.example.myarena.persistance.dao;

public class ReservationDAOPostgres {
}
